syntax = "proto3";
package neutron.dex;

import "gogoproto/gogo.proto";
import "neutron/dex/pool_reserves.proto";

option go_package = "github.com/neutron-org/neutron/v5/x/dex/types";

// NOTE: This struct is never actually stored in the KV store. It is merely a
// convenience wrapper for holding both sides of a pool.

message Pool {
  uint64 id = 1;
  PoolReserves lower_tick0 = 2;
  PoolReserves upper_tick1 = 3;
}
